yaml/replicated/manifests/demployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-direct-deployment
  labels:
    app: app-direct
    component: app-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-direct
      component: app-server
  template:
    metadata:
      labels:
        app: app-direct
        component: app-server
    spec:
      containers:
        - name: appdirect
          image: cremerfc/appdirect: BUILD_TAG
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
