yaml/replicated/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-direct-deployment
  labels:
    app: app-direct
    component: app-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-direct
      component: app-server
  template:
    metadata:
      labels:
        app: app-direct
        component: app-server
    spec:
      containers:
        - name: appdirect
          image: cremerfc/appdirect:latest
