yaml/replicated/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: example-nginx
            servicePort: 80
